[tool.poetry]
name = "citation"
version = "0.1.0"
description = ""
authors = ["CALIL Inc."]

[tool.poetry.dependencies]
python = "^3.9"
click = "*"
isbnlib = "*"
colorama = "*"
halo = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
